@@ -3,7 +3,7 @@
 PostgreSQL provides various statistics which includes information about tables, indexes, functions and other database objects and their usage. Moreover, statistics has detailed information about connections, current queries and database operations (INSERT/DELETE/UPDATE). But most of this statistics are  provided as permanently incremented counters. The pgcenter provides convenient interface to this statistics and allow viewing statistics changes in time interval, eg. per second. The pgcenter provides fast access for database management task, such as editing configuration files, reloading services, viewing log files and canceling or terminating database backends (by pid or using state mask). However if need execute some specific operations, pgcenter can start psql session for this purposes.
 
 #### Features:
-- top-like interface;
+- top-like interface with sorting and filtration functions;
 - use same connection options as with psql;
 - tabs support, possible to work concurrently with many postgres services (limited by 8).
 - show current system load and cpu/memory/swap usage;
